# istampit-cli

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
istampit-cli/: .gitignore  LICENSE  README.md
istampit-cli/src/istampit_cli/: __main__.py
istampit-cli/tests/: test_parser.py  test_verify_golden.py
scripts/: spike_check_ots_api.py
src/istampit_cli/: __main__.py  stamp_hash.py
src/istampit_cli.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_verify_golden.py
