[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "istampit-cli"
version = "0.1.0"
description = "iStampit CLI wrapper around OpenTimestamps (stamp, verify, upgrade, info)"
authors = [{name="iStampit"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "opentimestamps-client>=0.7.0",
]

[project.scripts]
istampit = "istampit_cli.__main__:main"

[project.urls]
Homepage = "https://github.com/sinai-inc/istampit-cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
